# curl-vala

./: CMakeLists.txt  README.md  curl-vala.pc.in  vala-curl.pc.in
cmake/: FindCurl.cmake  UseVala.cmake
examples/: Makefile  fetch-website-stream.vala  fetch-website.vala  send-mail.vala
src/: CMakeLists.txt  curl-curlerror.vala  curl-easy.vala  curl-functions.vala  curl-input-stream.vala  curl-output-stream.vala  curl-read-function.vala  curl-receiver.vala  curl-sender.vala  curl-write-function.vala  libcurl.vapi  native-curl.vapi
